# raccolta

./: Cargo.toml  README.md
docs/specification/: Query Expression.md
raccolta-engine/: Cargo.toml  README.md
raccolta-engine/src/: insert.rs  lib.rs  select.rs  sorting.rs  table.rs
raccolta-engine/tests/: select_simple.rs
raccolta-shell/: Cargo.toml  README.md
raccolta-shell/src/: auto_complete.rs  main.rs  syntax_highlighted.rs
raccolta-syntax/: Cargo.toml
raccolta-syntax/src/: characters.rs  keyword.rs  lib.rs  parse.rs  set_function.rs  token.rs
raccolta-syntax/src/clause/: fetch_first_clause.rs  from_clause.rs  group_by_clause.rs  having_clause.rs  mod.rs  order_by_clause.rs  where_clause.rs
raccolta-syntax/src/common/: mod.rs  table_name.rs
raccolta-syntax/src/expression/: boolean_expression.rs  column_reference.rs  data_type.rs  mod.rs  numeric_value_expression.rs  query_expression.rs  query_specification.rs  row_value_constructor.rs  row_value_expression.rs  simple_value_specification.rs  string_value_expression.rs  table_expression.rs  table_reference.rs  table_value_constructor.rs  value_expression.rs
raccolta-syntax/src/parse/: error.rs  extensions.rs
raccolta-syntax/src/predicate/: comparison_predicate.rs  mod.rs
raccolta-syntax/src/schema/: mod.rs
raccolta-syntax/src/statement/: insert_statement.rs  mod.rs  select_statement_single_row.rs  sql_data_change_statement.rs  sql_data_statement.rs  sql_schema_definition_statement.rs  sql_schema_statement.rs
src/: lib.rs
src/syntax/: keyword.rs  mod.rs  parse.rs  set_function.rs  token.rs
(+20 files in other folders)
