[package]
name = "raccolta-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
raccolta-engine = { path = "../raccolta-engine" }
raccolta-syntax = { path = "../raccolta-syntax" }

crossterm = "*"
inquire = "*"
strum = { version = "*", features = [ "derive" ] }

[dev-dependencies]
pretty_assertions = "*"
rstest = "*"
